# render_cool_stuff

./: CMakeLists.txt  README.md  app.cpp  app.h  baserender.cpp  baserender.h  main.cpp  mandelbrotrender.cpp  mandelbrotrender.h
